Changes to support go service
