# src/app/api/models/config.ts
@@ -1,7 +1,0 @@
-/* tslint:disable */
-import { OwnerTypeArray } from './owner-type-array';
-import { PreferenceDefinitionArray } from './preference-definition-array';
-export interface Config {
-  ownerTypes?: OwnerTypeArray;
-  definitions?: PreferenceDefinitionArray;
-}
