# src/app/api/models/owner-type-array.ts
@@ -1,4 +1,0 @@
-/* tslint:disable */
-import { OwnerType } from './owner-type';
-
-export type OwnerTypeArray = Array<OwnerType>;
