# src/app/api/models/preference-definition-array.ts
@@ -1,4 +1,0 @@
-/* tslint:disable */
-import { PreferenceDefinition } from './preference-definition';
-
-export type PreferenceDefinitionArray = Array<PreferenceDefinition>;
