# src/app/api/models/preference-owner.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 export interface PreferenceOwner {
   id?: string;
-  ownerType?: string;
+  type?: string;
   active?: string;
   profileIds?: Array<string>;
 }
