# src/app/api/models/profile-array.ts
@@ -1,4 +1,0 @@
-/* tslint:disable */
-import { Profile } from './profile';
-
-export type ProfileArray = Array<Profile>;
