# src/app/api/models/profile-version.ts
@@ -1,5 +1,5 @@
 /* tslint:disable */
 export interface ProfileVersion {
   version?: number;
-  version-date?: string;
+  versiondate?: string;
 }
